--- a/레이아웃/인라인+블럭레벨.md
+++ b/레이아웃/인라인+블럭레벨.md
@@ -1,7 +1,7 @@
 # CSS inline level element와 block level element
 
-- **inline level element** : 태그 중에서 자동 줄바꿈이 없고, 속성이 화면의 일부를 차지하는 태그 ex) a 태그 
-- **block level element** : 태그 중에서 자동 줄바꿈이 있고, 속성이 화면 전체를 차지하는 태그 ex) h1 태그 , p 태그 
+- **inline level element** : 태그 중에서 자동 줄바꿈이 없고, 속성이 화면의 일부를 차지하는 태그, width height 크기 조정 불가 ex) a 태그 
+- **block level element** : 태그 중에서 자동 줄바꿈이 있고, 속성이 화면 전체를 차지하는 태그, width height크기 조정 가능 ex) h1 태그 , p 태그 
 
 - 이는 사용자가 style에서 변경 가능 
 ```html
@@ -9,3 +9,6 @@ h1{display: inline;} // block -> inline
 a{display: block;} // inline->block
 ``` 
 - 혹은 width와 height을 설정해줘도 된다.
+
+- **display: inline** : 속성이 화면의 일부를 차지하지만 width 와 height 크기 조정 불가
+- **display: inline-block** : 속성이 화면의 일부를 차지하고 width와 height 크기 조정 가능
