--- a/플렉스/플렉스.md
+++ b/플렉스/플렉스.md
@@ -20,6 +20,8 @@
 - 웹페이지 화면이 작아질 때 작아지는 공간 분담을 얼마나 할 것인가를 나타낸다.
 - flex-shirink 값을 0으로 두면 공간 분담을 아예 하지 않겠다는 것으로, 아예 작아지지 않는다.
 
+#### flex 1 or flex 2
+- flex 박스 내에서 1만큼을 차지하겠다 혹은 2만큼을 차지하겠다는 의미이다.
 
 #### holy grail layout
 ![holygrail](https://s3-ap-northeast-2.amazonaws.com/opentutorials-user-file/module/2367/4744.png)
